--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
           Hi my Name is <span class="aryan">Aryan</span> And i am a
           <span id="element"></span>
           <div class="buttons">
-            <button class="btn">Download Resume</button>
-            <button class="btn">Visit GitHub</button>
+            <a href="assets\Logo\Resume\aryan pawar Resume.pdf" download="resume.pdf"><button class="btn">Download Resume</button></a>
+            <a href="https://github.com/Aryanpawar77" target="_blank"
+              ><button class="btn">Visit GitHub</button></a
+            >
           </div>
         </div>
 
