--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav>
         <!-- Left side -->
-        <div class="left">Portfolio</div>
+        <div class="left">Aryan's Portfolio</div>
 
         <!-- Right side -->
         <div class="right">
