--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="right">
           <div class="links">
             <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="#">Services</a>
             <a href="#">Projects</a>
             <a href="#">Contact</a>
