--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Hi my Name is <span class="aryan">Aryan</span> And i am a
           <span id="element"></span>
           <div class="buttons">
-            <a href="assets\Logo\Resume\aryan pawar Resume.pdf" download="resume.pdf"><button class="btn">Download Resume</button></a>
+            <a id="downloadCv"><button class="btn">Download Resume</button></a>
             <a href="https://github.com/Aryanpawar77" target="_blank"
               ><button class="btn">Visit GitHub</button></a
             >
@@ -162,5 +162,6 @@
         typeSpeed: 50,
       });
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
